--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </li>
 
         <li class="header-li">
-          <a class="header-link" href="#">CONTACT </a>
+          <a class="header-link" href="#contact">CONTACT </a>
         </li>
 
         <li class="header-li">
-          <a class="header-link" href="#">SIGNUP</a>
+          <a class="header-link" href="#sign">SIGNUP</a>
         </li>
       </ul>
     </nav>
@@ -60,7 +60,7 @@
   <button class="hero-button">Sign Up</button>
 </div>
 
-<div class="overiew">
+<div id="overiew" class="overiew">
   <div class="container">
     <div class="row">
       <div class="col-6">
@@ -223,7 +223,7 @@
 </div>
 
 
-<div class="container">
+<div id="contact" class="container">
   <div class="input-text">
     <div class="row">
       <div class="col-6">
@@ -254,7 +254,7 @@
 
 
 <footer>
-  <div class="container">
+  <div id="sign" class="container">
     <div class="row">
       <div class="col-3">
         <div class="adreas">Address</div>
